--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -3,8 +3,16 @@
 
   "error": "خطأ",
 
-  "menu": "المنيو",
-  "profile": "البروفايل",
-  "services": "الخدمات",
-  "home": "الرئيسيـة"
+  "home": "الرئيسيـة",
+  "aboutMe": "عني",
+  "myProjects": "مشاريعي",
+  "resume": "السيرة الذاتية",
+
+  "dark": "داكن",
+  "light": "فاتح",
+
+  
+  "logo": "الشعار",
+  "hireMe": "وظفني"
+
 }
