--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -13,6 +13,16 @@
 
   
   "logo": "الشعار",
-  "hireMe": "وظفني"
+  "hireMe": "وظفني",
+
+  "hi": "اهلا, انا",
+  "AbdoAmir": "عبدالرحمن امير",
+  "role": "مطور فلاتر",
+
+  "downloadCV": "تحميل السيرة الذاتية",
+
+  "experience": "خبرة",
+  "projects": "مشاريع",
+  "happyClients": "عملاء سعيدون"
 
 }
