--- a/lib/config/i18n/l10n/intl_en.arb
+++ b/lib/config/i18n/l10n/intl_en.arb
@@ -12,5 +12,14 @@
   "light": "Light",
 
   "logo": "Logo",
-  "hireMe": "Hire me"
+  "hireMe": "Hire me",
+
+  "hi": "Hi, I am",
+  "AbdoAmir": "Abdulrahman Amir",
+  "role": "Flutter Developer",
+  "downloadCV": "Download CV",
+
+  "experience": "Experience",
+  "projects": "Projects",
+  "happyClients": "Happy Clients"
 }
