--- a/lib/config/i18n/l10n/intl_en.arb
+++ b/lib/config/i18n/l10n/intl_en.arb
@@ -13,6 +13,7 @@
 
   "logo": "Logo",
   "hireMe": "Hire me",
+  "contactMe": "Contact Me",
 
   "hi": "Hi, I am",
   "AbdoAmir": "Abdulrahman Amir",
