--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -14,6 +14,7 @@
   
   "logo": "الشعار",
   "hireMe": "وظفني",
+  "contactMe": "تواصل معي",
 
   "hi": "اهلا, انا",
   "AbdoAmir": "عبدالرحمن امير",
