setup other projects sectors

--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -4,6 +4,7 @@
   "error": "خطأ",
 
   "home": "الرئيسيـة",
+  "services": "خدماتي",
   "aboutMe": "عني",
   "myProjects": "مشاريعي",
   "resume": "السيرة الذاتية",
