--- a/lib/config/i18n/l10n/intl_en.arb
+++ b/lib/config/i18n/l10n/intl_en.arb
@@ -4,6 +4,7 @@
   "error": "Error",
 
   "home": "Home",
+  "services": "Services",
   "aboutMe": "About Me",
   "myProjects": "Projects",
   "resume": "Resume",
