--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -25,6 +25,25 @@
 
   "experience": "خبرة",
   "projects": "مشاريع",
-  "happyClients": "عملاء سعيدون"
+  "happyClients": "عملاء سعيدون",
 
+
+  "mobileAppDevelopmentTitle": "تطوير تطبيقات الموبايل (iOS و Android)",
+  "mobileAppDevelopmentDesc": "أقوم بتطوير تطبيقات موبايل عالية الجودة لكلٍ من iOS و Android باستخدام Flutter. أركز على تقديم تطبيقات سريعة الاستجابة وسهلة الاستخدام تشبه التطبيقات الأصلية على كل منصة. أضمن تنقلًا سلسًا، وتصميمًا بديهيًا، وأداءً ممتازًا عبر مختلف الأجهزة.",
+
+  "crossPlatformDevelopmentTitle": "التطوير متعدد المنصات",
+  "crossPlatformDevelopmentDesc": "أبني تطبيقات تعمل بسلاسة على منصات متعددة باستخدام كود Flutter واحد. هذا الأسلوب يوفر الوقت ويقلل التكاليف ويضمن أداءً وتصميمًا متناسقًا. سواء كان التطبيق يعمل على Android أو iOS أو الويب أو سطح المكتب، أحرص على أن يتكيف بسلاسة.",
+
+  "uiUxImplementationTitle": "تنفيذ واجهات وتجربة المستخدم (UI/UX)",
+  "uiUxImplementationDesc": "أحوّل النماذج التصميمية من أدوات مثل Figma إلى واجهات Flutter عملية ومتقنة. أركز على تصميمات متجاوبة، وخطوط واضحة، ورسوم متحركة جذابة. والنتيجة هي تجربة مستخدم بصرية ممتعة وسهلة الاستخدام.",
+
+  "backendIntegrationTitle": "تكامل مع الخوادم (Backend Integration)",
+  "backendIntegrationDesc": "أربط التطبيقات بالخدمات الخلفية وواجهات الـ APIs لإضفاء الحيوية عليها. بخبرتي مع Firebase وواجهات REST APIs أضمن تحديثات في الوقت الحقيقي ومعالجة بيانات آمنة. من تسجيل الدخول إلى تخزين البيانات، أتأكد أن كل شيء يعمل بانسيابية.",
+
+  "deploymentPublishingTitle": "النشر والإصدار",
+  "deploymentPublishingDesc": "أقوم بإعداد التطبيقات للنشر وأرشدها خلال عملية الإطلاق على متجر Google Play ومتجر App Store. يشمل ذلك تحسين التطبيق، إعداد بيانات المتجر، والالتزام بمتطلبات المنصات. الهدف هو إتاحة تطبيقك للمستخدمين مع عملية إطلاق سلسة.",
+
+  "whoIAM":"من أنا",
+
+  "aboutMeDescription": "أنا مطور Flutter مبتدئ شغوف ببناء تطبيقات موبايل عالية الجودة تعمل عبر الأنظمة المختلفة. أتقن تصميم واجهات المستخدم المتجاوبة ولدي خبرة قوية في إدارة الحالة باستخدام BLoC و Cubit و Riverpod. كما أجيد استخدام ScreenUtil لجعل الواجهات متجاوبة، و Shimmer لعرض الهياكل العظمية، وإدارة التخزين المؤقت بكفاءة باستخدام Hive و SharedPreferences و GetStorage.\n\nتشمل خبرتي أيضًا خدمات Firebase مثل تسجيل الدخول والمصادقة، تسجيل الدخول عبر Google، قاعدة البيانات اللحظية، التخزين السحابي، وتدفقات تسجيل المستخدم. أدمج كذلك نظام الثيمات، دعم تعدد اللغات (Localization)، التحميل المسبق للصور، وتشغيل الفيديو مع دعم Picture-in-Picture لتقديم تجارب سلسة للمستخدم. ومع تركيزي القوي على معمارية نظيفة (Clean Architecture) ومبادئ البرمجة كائنية التوجه (OOP)، أضمن كتابة شيفرة قابلة للتوسع والصيانة بكفاءة.\n\nبعيدًا عن تطوير التطبيقات، لدي شغف بتعديل ألعاب Call of Duty واستكشاف آلياتها وصناعة محتوى مخصص. كما أنني أستمتع بالعمل بلغة Python، خصوصًا في كتابة السكربتات وأدوات الأتمتة لتبسيط المهام وحل التحديات العملية. بدافعي وفضولي القوي أحب الجمع بين تطوير Flutter واهتماماتي الأخرى في البرمجة والتعديل لدفع الإبداع والتقنية إلى الأمام."
 }
