--- a/lib/config/i18n/l10n/intl_en.arb
+++ b/lib/config/i18n/l10n/intl_en.arb
@@ -23,5 +23,26 @@
 
   "experience": "Experience",
   "projects": "Projects",
-  "happyClients": "Happy Clients"
+  "happyClients": "Happy Clients",
+
+
+  "mobileAppDevelopmentTitle": "Mobile App Development (iOS & Android)",
+  "mobileAppDevelopmentDesc": "I develop high-quality mobile applications for both iOS and Android using Flutter. My focus is on delivering fast, responsive, and user-friendly apps\nthat feel native on each platform. I ensure smooth navigation, intuitive design, and seamless performance across different devices.",
+
+  "crossPlatformDevelopmentTitle": "Cross-platform Development",
+  "crossPlatformDevelopmentDesc": "I build applications that run seamlessly across multiple platforms using a single Flutter codebase. This approach saves time, reduces costs, and ensures consistent performance and design. Whether it’s Android, iOS, web, or desktop, I make sure the app adapts smoothly.",
+
+  "uiUxImplementationTitle": "UI/UX Implementation",
+  "uiUxImplementationDesc": "I transform design prototypes from tools like Figma into functional and pixel-perfect Flutter interfaces. My work emphasizes responsive layouts, clear typography, and engaging animations. The result is a user experience that’s both visually appealing and easy to use.",
+
+  "backendIntegrationTitle": "Backend Integration",
+  "backendIntegrationDesc": "I connect applications to backend services and APIs to bring them to life.With experience in Firebase and REST APIs, I ensure real-time updates and secure data handling. From authentication to data storage, I make sure everything works seamlessly.",
+
+  "deploymentPublishingTitle": "Deployment & Publishing",
+  "deploymentPublishingDesc": "I prepare applications for deployment and guide them through publishing on Google Play and the App Store. This includes app optimization, store listing setup, and compliance with platform requirements. The goal is to make your app available to users with a smooth launch process.",
+
+  "whoIAM":"Who I Am",
+
+  "aboutMeDescription": "I’m a Junior Flutter Developer passionate about building high-quality, cross-platform mobile applications. I specialize in responsive UI design and have solid experience in state management using BLoC, Cubit, and Riverpod. I’m skilled in leveraging tools like ScreenUtil for responsiveness, Shimmer for skeleton loading, and efficient caching with Hive, SharedPreferences, and GetStorage.\n\nMy expertise also covers Firebase services including Authentication, Google Sign-In, Realtime Database, Cloud Storage, and user registration flows. I integrate theming, localization, image pre-caching, and video handling (with Picture-in-Picture support) to create seamless user experiences. With a strong focus on clean architecture and OOP principles, I ensure scalable, maintainable, and efficient codebases.\n\nBeyond mobile development, I’m passionate about modding the Call of Duty series, exploring its mechanics and creating custom content. I also enjoy working with Python, where I focus on scripting and automation to streamline workflows and solve real-world challenges. Curious and driven, I thrive on combining creativity and technology to deliver innovative solutions."
+
 }
