--- a/lib/config/i18n/l10n/intl_ar.arb
+++ b/lib/config/i18n/l10n/intl_ar.arb
@@ -45,5 +45,23 @@
 
   "whoIAM":"من أنا",
 
-  "aboutMeDescription": "أنا مطور Flutter مبتدئ شغوف ببناء تطبيقات موبايل عالية الجودة تعمل عبر الأنظمة المختلفة. أتقن تصميم واجهات المستخدم المتجاوبة ولدي خبرة قوية في إدارة الحالة باستخدام BLoC و Cubit و Riverpod. كما أجيد استخدام ScreenUtil لجعل الواجهات متجاوبة، و Shimmer لعرض الهياكل العظمية، وإدارة التخزين المؤقت بكفاءة باستخدام Hive و SharedPreferences و GetStorage.\n\nتشمل خبرتي أيضًا خدمات Firebase مثل تسجيل الدخول والمصادقة، تسجيل الدخول عبر Google، قاعدة البيانات اللحظية، التخزين السحابي، وتدفقات تسجيل المستخدم. أدمج كذلك نظام الثيمات، دعم تعدد اللغات (Localization)، التحميل المسبق للصور، وتشغيل الفيديو مع دعم Picture-in-Picture لتقديم تجارب سلسة للمستخدم. ومع تركيزي القوي على معمارية نظيفة (Clean Architecture) ومبادئ البرمجة كائنية التوجه (OOP)، أضمن كتابة شيفرة قابلة للتوسع والصيانة بكفاءة.\n\nبعيدًا عن تطوير التطبيقات، لدي شغف بتعديل ألعاب Call of Duty واستكشاف آلياتها وصناعة محتوى مخصص. كما أنني أستمتع بالعمل بلغة Python، خصوصًا في كتابة السكربتات وأدوات الأتمتة لتبسيط المهام وحل التحديات العملية. بدافعي وفضولي القوي أحب الجمع بين تطوير Flutter واهتماماتي الأخرى في البرمجة والتعديل لدفع الإبداع والتقنية إلى الأمام."
+  "aboutMeDescription": "أنا مطور Flutter مبتدئ شغوف ببناء تطبيقات موبايل عالية الجودة تعمل عبر الأنظمة المختلفة. أتقن تصميم واجهات المستخدم المتجاوبة ولدي خبرة قوية في إدارة الحالة باستخدام BLoC و Cubit و Riverpod. كما أجيد استخدام ScreenUtil لجعل الواجهات متجاوبة، و Shimmer لعرض الهياكل العظمية، وإدارة التخزين المؤقت بكفاءة باستخدام Hive و SharedPreferences و GetStorage.\n\nتشمل خبرتي أيضًا خدمات Firebase مثل تسجيل الدخول والمصادقة، تسجيل الدخول عبر Google، قاعدة البيانات اللحظية، التخزين السحابي، وتدفقات تسجيل المستخدم. أدمج كذلك نظام الثيمات، دعم تعدد اللغات (Localization)، التحميل المسبق للصور، وتشغيل الفيديو مع دعم Picture-in-Picture لتقديم تجارب سلسة للمستخدم. ومع تركيزي القوي على معمارية نظيفة (Clean Architecture) ومبادئ البرمجة كائنية التوجه (OOP)، أضمن كتابة شيفرة قابلة للتوسع والصيانة بكفاءة.\n\nبعيدًا عن تطوير التطبيقات، لدي شغف بتعديل ألعاب Call of Duty واستكشاف آلياتها وصناعة محتوى مخصص. كما أنني أستمتع بالعمل بلغة Python، خصوصًا في كتابة السكربتات وأدوات الأتمتة لتبسيط المهام وحل التحديات العملية. بدافعي وفضولي القوي أحب الجمع بين تطوير Flutter واهتماماتي الأخرى في البرمجة والتعديل لدفع الإبداع والتقنية إلى الأمام.",
+
+  "fluency": "فلونسي",
+  "fluencyDescription": "Fluency هي منصة سعودية تتيح للمستخدمين ممارسة اللغة الإنجليزية مع معلمين أجانب محترفين من جميع أنحاء العالم. تساعد الأفراد على تطوير مهاراتهم اللغوية في المجالات المهنية والتعليمية، وكذلك عند السفر إلى الخارج حيث تكون اللغة الإنجليزية ضرورية غالبًا.",
+
+  "alHaddaf": "الهداف",
+  "haddafDescription": "الهداف هو المنصة المثالية للرياضيين والمدربين وعشاق الرياضة! أنشئ ملفك كلاعب أو مدرب واستعرض إنجازاتك وإحصائياتك. تسويق المواهب: روّج لمهاراتك وتواصل مع الأندية ووكلاء الرياضة. رفع الفيديوهات والصور: شارك أفضل لحظاتك وأبرز أداءك. تواصل بسهولة: تفاعل مع الأندية والمدربين الرياضيين بكل سلاسة.",
+
+  "sehtna": "صحتنا",
+  "sehtnaDescription": "صحتنا هو حل متكامل لإدارة الرعاية الصحية مصمم لتبسيط العمليات للمستشفيات والأطباء والمرضى. سواء كنت تدير المواعيد، أو تصل إلى السجلات الطبية، أو تتابع تاريخ المريض، فإن صحتنا يوفر منصة قوية وسهلة الاستخدام مصممة لتلبية احتياجات الرعاية الصحية الحديثة.",
+
+  "addedPower": "ادد باور",
+  "addedPowerDescription": "أدِد باور هو حلك الموثوق لشراء قطع غيار السيارات الأصلية وعالية الجودة مباشرة من الموردين المعتمدين. سواء كنت مالك سيارة أو مختص صيانة، يوفر لك تطبيقنا وصولًا سريعًا وآمنًا إلى القطع التي تحتاجها بكل سهولة من خلال هاتفك.",
+
+  "ruknAlAqar": "ركن العقار",
+  "ruknDescription": "اكتشف طريقة أذكى لشراء وبيع وتأجير الشقق مع ركن العقار – شريكك الموثوق في مجال العقارات. سواء كنت تبحث عن منزل أحلامك، أو تعرض عقارًا للبيع، أو تبحث عن إيجار، يوفر لك تطبيقنا تجربة سهلة وسريعة ومصممة خصيصًا لتلبية احتياجاتك.",
+
+  "manzoma": "منظومة",
+  "manzomaDescription": "منظومة هي أداة ذكية وقوية لإدارة سير العمل، صممت لمساعدة الأفراد والفرق على تنظيم المهام والتعاون بفاعلية. تعمل على تبسيط التواصل بين أعضاء الفريق وتقليل العمل اليدوي وزيادة الإنتاجية بشكل عام. مع منظومة يمكنك متابعة التقدم وتوزيع المسؤوليات والبقاء مركزًا على الأهداف. سواء كنت فريقًا صغيرًا أو مؤسسة كبيرة، فإن منظومة تتكيف مع احتياجات سير عملك."
 }
