--- a/lib/config/i18n/l10n/intl_en.arb
+++ b/lib/config/i18n/l10n/intl_en.arb
@@ -43,6 +43,24 @@
 
   "whoIAM":"Who I Am",
 
-  "aboutMeDescription": "I’m a Junior Flutter Developer passionate about building high-quality, cross-platform mobile applications. I specialize in responsive UI design and have solid experience in state management using BLoC, Cubit, and Riverpod. I’m skilled in leveraging tools like ScreenUtil for responsiveness, Shimmer for skeleton loading, and efficient caching with Hive, SharedPreferences, and GetStorage.\n\nMy expertise also covers Firebase services including Authentication, Google Sign-In, Realtime Database, Cloud Storage, and user registration flows. I integrate theming, localization, image pre-caching, and video handling (with Picture-in-Picture support) to create seamless user experiences. With a strong focus on clean architecture and OOP principles, I ensure scalable, maintainable, and efficient codebases.\n\nBeyond mobile development, I’m passionate about modding the Call of Duty series, exploring its mechanics and creating custom content. I also enjoy working with Python, where I focus on scripting and automation to streamline workflows and solve real-world challenges. Curious and driven, I thrive on combining creativity and technology to deliver innovative solutions."
+  "aboutMeDescription": "I’m a Junior Flutter Developer passionate about building high-quality, cross-platform mobile applications. I specialize in responsive UI design and have solid experience in state management using BLoC, Cubit, and Riverpod. I’m skilled in leveraging tools like ScreenUtil for responsiveness, Shimmer for skeleton loading, and efficient caching with Hive, SharedPreferences, and GetStorage.\n\nMy expertise also covers Firebase services including Authentication, Google Sign-In, Realtime Database, Cloud Storage, and user registration flows. I integrate theming, localization, image pre-caching, and video handling (with Picture-in-Picture support) to create seamless user experiences. With a strong focus on clean architecture and OOP principles, I ensure scalable, maintainable, and efficient codebases.\n\nBeyond mobile development, I’m passionate about modding the Call of Duty series, exploring its mechanics and creating custom content. I also enjoy working with Python, where I focus on scripting and automation to streamline workflows and solve real-world challenges. Curious and driven, I thrive on combining creativity and technology to deliver innovative solutions.",
+
+  "fluency": "Fluency",
+  "fluencyDescription": "Fluency is a Saudi platform that allows users to practice the English language with professional, foreign teachers from around the world. It helps individuals develop their language skills in professional and educational fields, as well as for travel abroad where the English language is often necessary.",
+
+  "alHaddaf": "Al Haddaf",
+  "haddafDescription": "Al-Haddaf is the ultimate platform for athletes, coaches, and sports enthusiasts! Create your player or coach profile and showcase your achievements and stats. Talent Marketing: Promote your skills and connect with clubs and sports agents. Upload Videos & Photos: Share your best moments and highlight your performance. Easy Communication: Interact with sports clubs and coaches effortlessly.",
+
+  "sehtna": "Sehtna",
+  "sehtnaDescription": "Sehtna is a comprehensive healthcare management solution designed to streamline operations for hospitals, doctors, and patients. Whether you're managing appointments, accessing medical records, or tracking patient history, Sehtna provides a powerful and user-friendly platform tailored for modern healthcare needs.",
+
+  "addedPower": "Added Power",
+  "addedPowerDescription": "Added Power is your trusted solution for buying genuine and high-quality car spare parts directly from verified suppliers. Whether you’re a car owner or a repair specialist, our app gives you fast, secure access to the parts you need right at your fingertips.",
+
+  "ruknAlAqar": "Rukn Al Aqar",
+  "ruknDescription": "Discover a smarter way to buy, sell, and rent apartments with Rukn Al Aqar – your trusted real estate partner. Whether you're searching for your dream home, listing a property for sale, or looking to rent, our app offers a simple and fast experience tailored to your needs.",
+
+  "manzoma": "Manzoma",
+  "manzomaDescription": "Manzoma is a smart and powerful workflow management tool designed to help individuals and teams organize tasks and collaborate effectively. It simplifies communication between team members, reduces manual work, and improves overall productivity. With Manzoma, you can track progress, assign responsibilities, and stay focused on your goals."
 
 }
